kubernetes/apps/default/notifier/app/resources/httproute-github.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: notifier-github
spec:
  hostnames:
    - webhook.goyangi.io
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: Exact
            value: /hooks/github-ci
      backendRefs:
        - name: notifier
          port: 80
